--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "hyphen-uppersorbian.tar.xz": f06b88ac1331cc26eb3535b3b20e190ab0a27ece
+  hyphen-uppersorbian.tar.xz: 34866916ee30abfc7f420cc099840949bb0c3f9a
