--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  hyphen-uppersorbian.tar.xz: 8894d8029e20ac3b29836dd3cf188cdb54114475
+  hyphen-uppersorbian.r58609.tar.xz: c01fa2dde1850fa563300cca390c3aca6b46ab2c
